<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgg"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar"
                android:layout_width="60dp"
                android:layout_height="35dp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginTop="9dp"
                android:src="@drawable/introda" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="Introducing Docker"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textV1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif-monospace"
                android:text="Definition"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="18dp"
                android:textStyle="bold"></androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textV2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="serif"
                android:text="@string/dockerDef"
                android:textColor="@color/white"
                android:textSize="13dp"></androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textV3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif-monospace"
                android:text="How ?"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="18dp"
                android:textStyle="bold"></androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textV4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="serif"
                android:text="@string/descripHow"
                android:textColor="@color/white"
                android:textSize="13dp"></androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textV5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif-monospace"
                android:text="The Architecture"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="18dp"
                android:textStyle="bold">
            </androidx.appcompat.widget.AppCompatTextView>

            <ImageView
                android:id="@+id/image1"
                android:layout_width="300dp"
                android:layout_height="170dp"
                android:layout_gravity="center" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textV6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="serif"
                android:text="@string/arciTech"
                android:textColor="@color/white"
                android:textSize="13dp">

            </androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textV7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif-monospace"
                android:text="Major Components"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="18dp"
                android:textStyle="bold"></androidx.appcompat.widget.AppCompatTextView>

            <ImageView
                android:id="@+id/image2"
                android:layout_width="300dp"
                android:layout_height="170dp"
                android:layout_gravity="center" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textV8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif-monospace"
                android:text="1. The Docker Client"
                android:textColor="@color/sky"
                android:textSize="18dp"
                android:textStyle="bold"></androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textV9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="serif"
                android:text="@string/dockerClient"
                android:textColor="@color/white"
                android:textSize="13dp"></androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textV10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif-monospace"
                android:text="2. Docker_Host"
                android:textColor="@color/sky"
                android:textSize="18dp"
                android:textStyle="bold"></androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textV11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="serif"
                android:text="@string/dockerHost"
                android:textColor="@color/white"
                android:textSize="13dp"></androidx.appcompat.widget.AppCompatTextView>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textV12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif-monospace"
                android:gravity="center"
                android:text="▶ Docker Daemon ◀"
                android:textColor="@color/pistache"
                android:textSize="18dp"
                android:textStyle="bold"></androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textV13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="serif"
                android:text="@string/dockerDaemon"
                android:textColor="@color/white"
                android:textSize="13dp"></androidx.appcompat.widget.AppCompatTextView>

            <ImageView
                android:id="@+id/image3"
                android:layout_width="300dp"
                android:layout_height="170dp"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textV14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif-monospace"
                android:gravity="center"
                android:text="▶ Docker image ◀"
                android:textColor="@color/pistache"
                android:textSize="18dp"
                android:textStyle="bold"></androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textV15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="serif"
                android:text="@string/dockerImage"
                android:textColor="@color/white"
                android:textSize="13dp"></androidx.appcompat.widget.AppCompatTextView>

            <ImageView
                android:id="@+id/image4"
                android:layout_width="300dp"
                android:layout_height="170dp"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textV16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif-monospace"
                android:gravity="center"
                android:text="▶ Docker Containers ◀"
                android:textColor="@color/pistache"
                android:textSize="18dp"
                android:textStyle="bold"></androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textV17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="serif"
                android:text="@string/dockerContainers"
                android:textColor="@color/white"
                android:textSize="13dp"></androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textV18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif-monospace"
                android:gravity="center"
                android:text="▶ Docker Networking ◀"
                android:textColor="@color/pistache"
                android:textSize="18dp"
                android:textStyle="bold"></androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textV19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="serif"
                android:text="@string/dockerNetworking"
                android:textColor="@color/white"
                android:textSize="13dp"></androidx.appcompat.widget.AppCompatTextView>

            <ImageView
                android:id="@+id/image6"
                android:layout_width="300dp"
                android:layout_height="170dp"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textV20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif-monospace"
                android:gravity="center"
                android:text="▶ Docker Storage ◀"
                android:textColor="@color/pistache"
                android:textSize="18dp"
                android:textStyle="bold"></androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textV21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="serif"
                android:text="@string/dockerStorage"
                android:textColor="@color/white"
                android:textSize="13dp"></androidx.appcompat.widget.AppCompatTextView>


            <ImageView
                android:id="@+id/image5"
                android:layout_width="300dp"
                android:layout_height="170dp"
                android:layout_gravity="center" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textV22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif-monospace"
                android:text="3. The Docker Registry"
                android:textColor="@color/sky"
                android:textSize="18dp"
                android:textStyle="bold"></androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textV23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="serif"
                android:text="@string/dockerRegistry"
                android:textColor="@color/white"
                android:textSize="13dp"></androidx.appcompat.widget.AppCompatTextView>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>