<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup"
    tools:layout_editor_absoluteY="81dp">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="191dp"
        android:layout_height="187dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="360dp"
        app:layout_constraintBottom_toTopOf="@+id/clickableInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/docker" />

    <EditText
        android:id="@+id/t1"
        android:layout_width="264dp"
        android:layout_height="51dp"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:hint="Username"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/t2"
        app:layout_constraintEnd_toEndOf="@+id/t3"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/t2"
        android:layout_width="267dp"
        android:layout_height="48dp"
        android:layout_marginBottom="59dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/t3"
        app:layout_constraintEnd_toEndOf="@+id/t1"
        app:layout_constraintTop_toBottomOf="@+id/t1" />

    <EditText
        android:id="@+id/t3"
        android:layout_width="265dp"
        android:layout_height="50dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginBottom="166dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t2" />

    <Button
        android:id="@+id/signupBtn"
        android:layout_width="161dp"
        android:layout_height="40dp"
        android:layout_marginBottom="57dp"
        android:background="@color/sky"
        android:text="Signup"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t3"
        app:layout_constraintVertical_bias="0.441" />

    <TextView
        android:id="@+id/clickableInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="74dp"
        android:fontFamily="@font/cantora_one"
        android:text="@string/oldmember"
        android:textColor="@color/sky"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/signupBtn"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>